--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -440,7 +440,7 @@ body{
             display: block;
             width: 100%;
             height: 500px;
-            background: url(../IMG/bg_statistics.png) no-repeat center;
+            background: url(IMG/bg_statistics.png) no-repeat center;
             .des1{
                 position: absolute;
                 top: 0px;
